--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
   http: ^0.12.0
   google_maps_flutter: ^1.0.3
   location: ^3.0.2
+  flutter_svg: ^0.19.3
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
@@ -39,6 +42,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+  assets:
+    - assets/images/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
