OAuth in session

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   google_maps_flutter: ^1.0.3
   location: ^3.0.2
   flutter_svg: ^0.19.3
+  http_auth: ^1.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
