--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,8 +21,10 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+
   flutter:
     sdk: flutter
+
 
   http: ^0.12.0
   google_maps_flutter: ^1.0.3
@@ -33,8 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  flutter_dotenv: ^5.0.0
+  dotenv: ^3.0.0
 
 dev_dependencies:
+  flutter_config: ^1.0.5
   flutter_test:
     sdk: flutter
 
